@@ -1,5 +1,10 @@
 2017-02-10  Edward Jones  <ed.jones@embecosm.com>
 
+	* lib/Driver.cpp (parseResults): Read in the newly formatted
+	results csv file.
+
+2017-02-10  Edward Jones  <ed.jones@embecosm.com>
+
 	* script/measure-code-size.py: Update result file csv output to
 	include more metadata about the compiled element
 
